# pcde-rs

./: .gitignore  Cargo.toml  README.md  aliases.js  index.html  push_docs  search-index.js
.github/: dependabot.yml
benches/: bench.rs
examples/: example.rs  pyramid.rs
implementors/core/fmt/: trait.Debug.js
implementors/core/marker/: trait.Send.js  trait.Sync.js
pcde/: all.html  index.html  sidebar-items.js  struct.Pyramid.html
pcde/pyramid/: Pyramid.t.html  struct.Pyramid.html
src/: layer.rs  lib.rs  node.rs  pyramid.rs  tree.rs
src/pcde/: lib.rs.html  pyramid.rs.html
