[package]
name = "pcde"
version = "0.0.0"
authors = ["Stefan Kroboth <stefan.kroboth@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Point Cloud Density Estimation"
documentation = "https://stefan-k.github.io/pcde-rs/pcde/"
homepage = "https://github.com/stefan-k/pcde-rs"
repository = "https://github.com/stefan-k/pcde-rs"
readme = "README.md"
keywords = ["point cloud", "density estimation"]
categories = ["science"]
#license-file = "LICENSE-APACHE"
exclude = [ 
	".travis.yml",
	"push_docs",
]

[dependencies]
image = "0.24.6"

[dev-dependencies]
rand = "0.8.0"

[features]
default = []

[badges]
travis-ci = { repository = "stefan-k/pcde-rs", branch = "master" }
